2005-05-04  Richard Hoelscher  <rah@rahga.com>

	* games-card-pixmaps.c (games_card_pixmaps_get_red_joker): 
	Specify the correct card. This only affected Aisleriot Thieves.

2005-04-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Handle the case when no categories are
	defined. i.e. games with only one level.

2005-04-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-controls.c: Don't leak a gconf client reference when
	errors occur.

2005-04-04  Richard Hoelscher  <rah@rahga.com>

	* games-stock.c (games_stock_items): i18n notes.

2005-04-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Port Dennis' UI fixes back to the gob
	fiile and repack the vbox so that it works as expected by
	same-gnome et. al.

2005-03-31  Richard Hoelscher  <rah@rahga.com>

	* games-stock.c (games_stock_items): Remove ellipsis for the menuitem "Scores",
	since it does not require further input from the user prior to doing something. 
	Also, try using "New", "Pause" and "Restart" without appending the word "Game".

2005-03-30  Richard Hoelscher  <rah@rahga.com>

	* games-stock.h:
	* games-stock.c: New files to support games-stock menu items.
	Call games_stock_init () prior to using the items.

2005-03-23  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gnome-scores-dialog.c: Make the scores dialog more HIG compliant.
 	
2005-03-23  Richard Hoelscher  <rah@rahga.com>

	* games-gridframe.h:
	* games-gridframe.c: Alignment support added throughout.
	games_grid_frame_set_alignment): New function.

2005-03-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-network-dialog.c: A patch from Dennis Cranston
	<dennis_cranston@yahoo.com> to make the network game dialog a lot,
	lot, less ugly.

	* games-frame.c: 	
	* games-frame.h: A patch from Dennis Cranston
	<dennis_cranston@yahoo.com> to convert games-frame to be what is
	essentially gimp-frame. This makes it a far nicer widget and lets