@@ -1,10 +1,10 @@
-/* Generated by GOB (v2.0.11) on Sun Apr 24 12:38:36 2005
+/* Generated by GOB (v2.0.11) on Wed May 25 16:18:57 2005
    (do not edit directly) */
 
 /* End world hunger, donate to the World Food Programme, http://www.wfp.org */
 
 
-#line 14 "games-scores-dialog.gob"
+#line 22 "games-scores-dialog.gob"
 
 /* Games Scores Dialog - Display high scores
  *
@@ -34,13 +34,13 @@
 #define ___GOB_UNLIKELY(expr) (expr)
 #endif /* G_LIKELY */
 
-#line 23 "games-scores-dialog.gob"
+#line 31 "games-scores-dialog.gob"
 
 #include <gtk/gtk.h>
 
 #line 42 "games-scores-dialog.c"
 
-#line 27 "games-scores-dialog.gob"
+#line 35 "games-scores-dialog.gob"
 
 
 #include <config.h>
@@ -87,6 +87,8 @@ static GtkDialogClass *parent_class = NULL;
 #define self_set_style games_scores_dialog_set_style
 #define self_set_category_description games_scores_dialog_set_category_description
 #define self_set_hilight games_scores_dialog_set_hilight
+#define self_set_message games_scores_dialog_set_message
+#define self_set_buttons games_scores_dialog_set_buttons
 GType
 games_scores_dialog_get_type (void)
 {
@@ -138,15 +140,15 @@ ___finalize(GObject *obj_self)
 	gpointer priv G_GNUC_UNUSED = self->_priv;
 	if(G_OBJECT_CLASS(parent_class)->finalize) \
 		(* G_OBJECT_CLASS(parent_class)->finalize)(obj_self);
-#line 46 "games-scores-dialog.gob"
+#line 56 "games-scores-dialog.gob"
 	if(self->_priv->domain) { g_free ((gpointer) self->_priv->domain); self->_priv->domain = NULL; }
-#line 144 "games-scores-dialog.c"
-#line 47 "games-scores-dialog.gob"
+#line 146 "games-scores-dialog.c"
+#line 57 "games-scores-dialog.gob"
 	if(self->_priv->categories) { g_hash_table_destroy ((gpointer) self->_priv->categories); self->_priv->categories = NULL; }
-#line 147 "games-scores-dialog.c"
-#line 48 "games-scores-dialog.gob"
+#line 149 "games-scores-dialog.c"
+#line 58 "games-scores-dialog.gob"
 	if(self->_priv->catindices) { g_hash_table_destroy ((gpointer) self->_priv->catindices); self->_priv->catindices = NULL; }
-#line 150 "games-scores-dialog.c"
+#line 152 "games-scores-dialog.c"
 }
 #undef __GOB_FUNCTION__
 
@@ -163,15 +165,15 @@ games_scores_dialog_class_init (GamesScoresDialogClass * c G_GNUC_UNUSED)
 	g_object_class->finalize = ___finalize;
 }
 #undef __GOB_FUNCTION__
-#line 172 "games-scores-dialog.gob"
+#line 182 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
-#line 170 "games-scores-dialog.c"
+#line 172 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::init"
 	self->_priv = G_TYPE_INSTANCE_GET_PRIVATE(self,TYPE_SELF,GamesScoresDialogPrivate);
  {
-#line 172 "games-scores-dialog.gob"
+#line 182 "games-scores-dialog.gob"
 
     GtkWidget *vbox;
     GtkWidget *scroll;
@@ -214,8 +216,17 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
 					 GTK_SHADOW_ETCHED_IN);
     gtk_box_pack_end (GTK_BOX (vbox), scroll, TRUE, TRUE, 0);
     
+    self->_priv->message = gtk_label_new ("");
+    gtk_label_set_use_markup (GTK_LABEL (self->_priv->message), TRUE);
+    gtk_label_set_justify (GTK_LABEL (self->_priv->message), 
+	                   GTK_JUSTIFY_CENTER);    
+    gtk_box_pack_start (GTK_BOX (vbox), self->_priv->message, FALSE, FALSE, 0);
+
+    self->_priv->hdiv = gtk_hseparator_new ();
+    gtk_box_pack_start (GTK_BOX (vbox), self->_priv->hdiv, FALSE, FALSE, 0);
+
     self->_priv->catbar = gtk_hbox_new (FALSE, 12);
-    gtk_box_pack_end (GTK_BOX (vbox), self->_priv->catbar, FALSE, FALSE, 0);
+    gtk_box_pack_start (GTK_BOX (vbox), self->_priv->catbar, FALSE, FALSE, 0);
 
     self->_priv->label = gtk_label_new ("");
     gtk_box_pack_start (GTK_BOX (self->_priv->catbar), self->_priv->label, 
@@ -253,15 +264,15 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
    
     gtk_container_add (GTK_CONTAINER (scroll), listview);
     
-    gtk_dialog_add_button (GTK_DIALOG (self), GTK_STOCK_CLOSE,
-			   GTK_RESPONSE_CLOSE);
-    gtk_dialog_set_default_response (GTK_DIALOG (self), 
-				     GTK_RESPONSE_CLOSE);
+    games_scores_dialog_set_buttons (self, GAMES_SCORES_CLOSE_BUTTON);
+
     gtk_window_set_destroy_with_parent (GTK_WINDOW (self), TRUE);
 
     gtk_widget_show_all (vbox);
+    gtk_widget_hide (self->_priv->hdiv);
+    gtk_widget_hide (self->_priv->message);
   
-#line 265 "games-scores-dialog.c"
+#line 276 "games-scores-dialog.c"
  }
 }
 #undef __GOB_FUNCTION__
@@ -278,14 +289,14 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
  * Returns: a new widget
  *
  **/
-#line 66 "games-scores-dialog.gob"
+#line 76 "games-scores-dialog.gob"
 GtkWidget * 
 games_scores_dialog_new (const gchar * domain, const gchar * title)
-#line 285 "games-scores-dialog.c"
+#line 296 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::new"
 {
-#line 66 "games-scores-dialog.gob"
+#line 76 "games-scores-dialog.gob"
 	
     GamesScoresDialog *dialog = GET_NEW;
 
@@ -295,17 +306,17 @@ games_scores_dialog_new (const gchar * domain, const gchar * title)
 
     return (GtkWidget *)dialog;
   }}
-#line 299 "games-scores-dialog.c"
+#line 310 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 76 "games-scores-dialog.gob"
+#line 86 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_set_hilight_private (GamesScoresDialog * self)
-#line 305 "games-scores-dialog.c"
+#line 316 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_hilight_private"
 {
-#line 77 "games-scores-dialog.gob"
+#line 87 "games-scores-dialog.gob"
 	
     GtkTreePath *path;
     GtkTreeSelection *selection;
@@ -318,17 +329,17 @@ games_scores_dialog_set_hilight_private (GamesScoresDialog * self)
     gtk_tree_selection_select_path (selection, path);
     g_free (path);
   }}
-#line 322 "games-scores-dialog.c"
+#line 333 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 90 "games-scores-dialog.gob"
+#line 100 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_redraw (GamesScoresDialog * self)
-#line 328 "games-scores-dialog.c"
+#line 339 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::redraw"
 {
-#line 91 "games-scores-dialog.gob"
+#line 101 "games-scores-dialog.gob"
 	
     gint i,n;
     GtkTreeIter iter;
@@ -389,50 +400,50 @@ games_scores_dialog_redraw (GamesScoresDialog * self)
 
     games_scores_dialog_set_hilight_private (self);
   }}
-#line 393 "games-scores-dialog.c"
-#undef __GOB_FUNCTION__
-
-#line 152 "games-scores-dialog.gob"
-static void 
-games_scores_dialog_change_category (GtkComboBox * widget, GamesScoresDialog * self)
-#line 399 "games-scores-dialog.c"
-{
-#define __GOB_FUNCTION__ "Games:Scores:Dialog::change_category"
-{
-#line 153 "games-scores-dialog.gob"
-	
-    self->_priv->hilight = 0;
-    games_scores_dialog_redraw (self);
-  }}
-#line 408 "games-scores-dialog.c"
+#line 404 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 #line 162 "games-scores-dialog.gob"
 static void 
+games_scores_dialog_change_category (GtkComboBox * widget, GamesScoresDialog * self)
+#line 410 "games-scores-dialog.c"
+{
+#define __GOB_FUNCTION__ "Games:Scores:Dialog::change_category"
+{
+#line 163 "games-scores-dialog.gob"
+	
+    self->_priv->hilight = 0;
+    games_scores_dialog_redraw (self);
+  }}
+#line 419 "games-scores-dialog.c"
+#undef __GOB_FUNCTION__
+
+#line 172 "games-scores-dialog.gob"
+static void 
 games_scores_dialog_show (GamesScoresDialog * self)
-#line 414 "games-scores-dialog.c"
+#line 425 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::show"
 {
-#line 163 "games-scores-dialog.gob"
+#line 173 "games-scores-dialog.gob"
 	 
     games_scores_dialog_redraw (self);
   }}
-#line 422 "games-scores-dialog.c"
+#line 433 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 167 "games-scores-dialog.gob"
+#line 177 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_hide (GamesScoresDialog * self)
-#line 428 "games-scores-dialog.c"
+#line 439 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::hide"
 {
-#line 168 "games-scores-dialog.gob"
+#line 178 "games-scores-dialog.gob"
 	
     self->_priv->hilight = 0;
   }}
-#line 436 "games-scores-dialog.c"
+#line 447 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 
@@ -446,14 +457,14 @@ games_scores_dialog_hide (GamesScoresDialog * self)
  * Adds a new category to combo box selector.
  *
  **/
-#line 272 "games-scores-dialog.gob"
+#line 291 "games-scores-dialog.gob"
 void 
 games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, const gchar * name)
-#line 453 "games-scores-dialog.c"
+#line 464 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::add_category"
 {
-#line 274 "games-scores-dialog.gob"
+#line 293 "games-scores-dialog.gob"
 	
     gchar *k;
 
@@ -467,7 +478,7 @@ games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, c
     self->_priv->catcounter++;
     gtk_combo_box_append_text (GTK_COMBO_BOX (self->_priv->combo), name);
   }}
-#line 471 "games-scores-dialog.c"
+#line 482 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -481,14 +492,14 @@ games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, c
  * is at this layer.
  *
  **/
-#line 296 "games-scores-dialog.gob"
+#line 315 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
-#line 488 "games-scores-dialog.c"
+#line 499 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_category"
 {
-#line 296 "games-scores-dialog.gob"
+#line 315 "games-scores-dialog.gob"
 	
     gint index;
 
@@ -496,17 +507,17 @@ games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
 						   key));
     gtk_combo_box_set_active (GTK_COMBO_BOX (self->_priv->combo), index);
   }}
-#line 500 "games-scores-dialog.c"
+#line 511 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 315 "games-scores-dialog.gob"
+#line 334 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoresStyle style)
-#line 506 "games-scores-dialog.c"
+#line 517 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_style"
 {
-#line 315 "games-scores-dialog.gob"
+#line 334 "games-scores-dialog.gob"
 	
     gchar *header;
 
@@ -524,7 +535,7 @@ games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoresStyle style)
     games_scores_dialog_change_category (GTK_COMBO_BOX (self->_priv->combo), 
 					 self);
   }}
-#line 528 "games-scores-dialog.c"
+#line 539 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
 /**
@@ -537,14 +548,14 @@ games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoresStyle style)
  * to the player where the game they just played is.
  *
  **/
-#line 342 "games-scores-dialog.gob"
+#line 361 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_category_description (GamesScoresDialog * self, const gchar * description)
-#line 544 "games-scores-dialog.c"
+#line 555 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_category_description"
 {
-#line 343 "games-scores-dialog.gob"
+#line 362 "games-scores-dialog.gob"
 	
     gchar *lstr;
 
@@ -553,17 +564,17 @@ games_scores_dialog_set_category_description (GamesScoresDialog * self, const gc
     gtk_label_set_use_markup (GTK_LABEL (self->_priv->label), TRUE);
     g_free(lstr);
   }}
-#line 557 "games-scores-dialog.c"
+#line 568 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 362 "games-scores-dialog.gob"
+#line 381 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
-#line 563 "games-scores-dialog.c"
+#line 574 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_hilight"
 {
-#line 363 "games-scores-dialog.gob"
+#line 382 "games-scores-dialog.gob"
 	
     /* We silently exit here since 0 is an explicit indication that we don't 
      * have a place in mind while greater than 10 is legitimate, but we
@@ -574,5 +585,92 @@ games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
     self->_priv->hilight = pos;
     games_scores_dialog_set_hilight_private (self);
   }}
-#line 578 "games-scores-dialog.c"
+#line 589 "games-scores-dialog.c"
+#undef __GOB_FUNCTION__
+
+/**
+ * games_scores_dialog_set_message:
+ * @self: a pointer to a GamesScoresDialog
+ * @message: the message
+ *
+ * Sets the message at the top of the dialog. Pango markup is understood.
+ *
+ **/
+#line 401 "games-scores-dialog.gob"
+void 
+games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message)
+#line 603 "games-scores-dialog.c"
+{
+#define __GOB_FUNCTION__ "Games:Scores:Dialog::set_message"
+{
+#line 401 "games-scores-dialog.gob"
+	
+    if ((message == NULL) || (*message == '\0')) {
+      gtk_widget_hide (self->_priv->message);
+      gtk_widget_hide (self->_priv->hdiv);
+    } else {
+      gtk_widget_show (self->_priv->message);
+      gtk_widget_show (self->_priv->hdiv);
+    }
+
+    gtk_label_set_label (GTK_LABEL (self->_priv->message), message);
+  }}
+#line 619 "games-scores-dialog.c"
+#undef __GOB_FUNCTION__
+
+/**
+ * games_scores_dialog_set_buttons:
+ * @self: a pointer to a GamesScoresDialog
+ * @buttons: An or-ed list of GamesScoresButtons
+ *
+ * Changes the button sets at the buttom of the dialog
+ *
+ **/
+#line 421 "games-scores-dialog.gob"
+void 
+games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
+#line 633 "games-scores-dialog.c"
+{
+#define __GOB_FUNCTION__ "Games:Scores:Dialog::set_buttons"
+{
+#line 421 "games-scores-dialog.gob"
+	
+    /* Remove an existing buttons. */
+    gtk_container_foreach (GTK_CONTAINER (GTK_DIALOG (self)->action_area),
+                           (GtkCallback) (gtk_widget_destroy), NULL);
+
+    /* The default is a single close button, suitable for the scores
+       menu item. */
+    if (buttons == 0)
+	buttons = GAMES_SCORES_CLOSE_BUTTON;
+
+    if (buttons & GAMES_SCORES_QUIT_BUTTON) {
+	gtk_dialog_add_button (GTK_DIALOG (self), GTK_STOCK_QUIT,
+	                       GTK_RESPONSE_REJECT);
+        gtk_dialog_set_default_response (GTK_DIALOG (self), 
+	       			         GTK_RESPONSE_REJECT);
+    }
+
+    if (buttons & GAMES_SCORES_UNDO_BUTTON) {
+	gtk_dialog_add_button (GTK_DIALOG (self), GTK_STOCK_UNDO,
+	                       GTK_RESPONSE_DELETE_EVENT);
+        gtk_dialog_set_default_response (GTK_DIALOG (self), 
+	       			         GTK_RESPONSE_DELETE_EVENT);
+    }
+
+    if (buttons & GAMES_SCORES_NEW_GAME_BUTTON) {
+	gtk_dialog_add_button (GTK_DIALOG (self), _("New Game"),
+	                       GTK_RESPONSE_ACCEPT);
+        gtk_dialog_set_default_response (GTK_DIALOG (self), 
+	       			         GTK_RESPONSE_ACCEPT);
+    }
+
+    if (buttons & GAMES_SCORES_CLOSE_BUTTON) {
+	gtk_dialog_add_button (GTK_DIALOG (self), GTK_STOCK_CLOSE,
+	                       GTK_RESPONSE_CLOSE);
+        gtk_dialog_set_default_response (GTK_DIALOG (self), 
+	       			         GTK_RESPONSE_CLOSE);
+    }
+  }}
+#line 676 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
