@@ -1,3 +1,15 @@
+2005-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-scores-dialog.gob: Split the button setting routine out
+	from the initialiser and give it its own function. This results in
+	nicer code.
+
+2005-05-24  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-scores-dialog.gob: Add a message area to the dialog. Use
+	games_scores_dialog_set_message. Also add an extra option to _new
+	to set the button types.
+
 2005-05-04  Richard Hoelscher  <rah@rahga.com>
 
 	* games-card-pixmaps.c (games_card_pixmaps_get_red_joker): 
